Try to fix dark/light mode toggle button position on mobile

--- a/docusaurus/src/scss/navbar.scss
+++ b/docusaurus/src/scss/navbar.scss
@@ -293,8 +293,8 @@ $selector-color-mode-toggle-wrapper: 'div[class*="ColorModeToggle"]';
     }
 
     button[class*="toggleButton"] {
-      right: 50px;
-      top: 12px;
+      right: 0px;
+      // top: 12px;
       border: none;
     }
 
